# sciqis

./: .gitignore  README.md  conda-env-sciqis.yml  l1_packages.py  l22.ipynb  l2_quantumComputer.py  l4_wignerFunction.py  l5_qutip.py  l6_dataAnalysis.py  l6_photon_birth_death.ipynb  l7_xueshiAnalysis.py  test_l3.py
l2_QC/: README.md  kron_vec_product.py  l22.ipynb  l2_quantumComputer.py  randomSimulator.py  test_l3.py
mylib_package/: README.md  pyproject.toml
mylib_package/src/mylib/: myclass.py
numpy_100/: 100_Numpy_exercises.ipynb
